--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -16,6 +16,12 @@
   color: #aaa;
 }
 
+.indexImg {
+  margin-top: 50px;
+  text-align: center;
+}
+
 .usermotto {
-  margin-top: 200px;
+  margin-top: 100px;
+  
 }
