--- a/pages/blogdetail/detail.wxss
+++ b/pages/blogdetail/detail.wxss
@@ -1,1 +1,16 @@
 /* pages/blogdetail/detail.wxss */
+.detail-center {
+  text-align: center;
+}
+
+.header {
+  text-align: center;
+  margin-bottom: 20px; 
+}
+
+.deContent {
+  margin-top: 30px;
+  padding: 0 10px 0 20px;
+  font-size: 15px;
+  text-indent: 2em;
+}
