--- a/pages/bloglists/lists.wxml
+++ b/pages/bloglists/lists.wxml
@@ -2,10 +2,19 @@
 <view class="container">
 <!-- 文章列表模板 -->
 <template name="lists">
-  <view>
-    <image src="" class="in-image"></image>
+  <navigator url="../../pages/blogdetail/detail?id={{id}}" hover-class="navigator-hover">
+    <view class="deImg">
+    <image src="{{image}}" class="in-image" background-size="cover"></image>
   </view>
-  <view>{{title}}</view>
-  <view>{{cTime}}</view>
+  <view class="infos">
+    <view class="deTitle">{{title}}</view>
+    <view class="deTime">{{cTime}}</view>
+  </view>
+  </navigator>
 </template>
+
+<!-- 循环输出列表 -->
+<view wx:for="{{newsList}}" wx:for-item="news" class="list">
+  <template is="lists" data="{{...news}}" />
+</view>
 </view>
