--- a/pages/bloglists/lists.wxss
+++ b/pages/bloglists/lists.wxss
@@ -1,1 +1,33 @@
 /* pages/bloglists/lists.wxss */
+.navigator-hover {
+    color:blue;
+    overflow: hidden;
+}
+/** 自定义其他点击态样式类 **/
+.other-navigator-hover {
+    color:red;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.list {
+}
+
+.deImg {
+}
+
+.deImg image{
+}
+
+.deTitle {
+
+}
+
+.deTime {
+
+}
